
5.2b1 -> 5.3a1
    - jbj: rpmsx: wrap getfilecon/lgetfilecon.
    - jbj: rpmsx: add persistent/lazy matchpathcon_{init,free}.
    - jbj: rpmsx: refactor the existing SELinux implementation.
    - jbj: python: fix: missing changelog in repo-md can segfault (David Smid).
    - jbj: rpmdav: oops, WebDAV is different code path, revert some changes.
    - jbj: rpmdav: compute st_nlink correctly for plain HTTP dirs.
    - jbj: rpmavx: fix: alloc an extra byte for pesky trailing '/'.
    - jbj: rpmdav: fix: refill/restart if forward parse runs out of data.
    - jbj: rpmhtml: fix: ... and don't forget to reinitialize all fields.
    - jbj: yarn: convert rpmhtml to usage mutex with refcounts.
    - rse: fix building under RPM_VENDOR_OPENPKG/switch-from-susr-to-musr-on-srpm-install
    - jbj: rpmio: fix: compute url length in rpmGenPath() w/o using pointers.
    - jbj: yarn: convert rpmavx to usage mutex with refcounts.
    - jbj: rename avContext to rpmavx.
    - jbj: rpmio: functional dir stream positioning.
    - jbj: rpmpgp: elimate msg argument, use __FUNCTION__ everywhere instead.
    - jbj: rpmio: eliminate sha224 and ripemd*, use beecrypt-4.2.0 instead.
    - jbj: rpmio: refactor dir stream handling from HTTP/DAV transport.
    - jbj: rpmio: add DIR stream positioning wrappers.
    - jbj: rpmio: add rpmdir.[ch] to refactor DIR handling routines.
    - jbj: rpmbf: add union/intersect of filters.
    - jbj: rpmfc: reduce the amount of debugging noise with lots of files.
    - jbj: rpmbf: use lookup3.c hash pairs with k linear combinations.
    - jbj: rpmbf: stub-in a Bloom filter.
    - jbj: selinux: fix: disabler bit toggle sense was inverted.
    - jbj: js: add getters/setters to handle defvar() variables.
    - jbj: js: add methods and unit tests for the Aug class.
    - jbj: augtool: finish proof-of-concept embedding. stdout capture todo++.
    - devzero2000: macros.in: add _datarootdir e _lispdir for GNU standard